[project]
name = "fluent_validator"
dependencies = []
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
version = "0.1.0"

[dependency-groups]
dev = [
    "pyrefly>=0.52.0",
    "pytest>=9.0.2",
    "ruff>=0.15.1",
    "ssort>=0.16.0",
    "taskipy>=1.14.1",
]


[tool.pytest.ini_options]
addopts = [
    "--disable-warnings",
    "--strict-markers",
    "--tb=short",
    "-v",
]
pythonpath = [
    "src",
]
testpaths = [
    "tests",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
extend-select = [
    "B",
    "COM",
    "D",
    "EXE",
    "F",
    "I",
    "ISC",
    "Q",
    "RET",
    "RUF",
    "S",
    "T",
    "UP",
]
extend-unsafe-fixes = [
    "UP",
]

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = ["D", "S101"]


[tool.taskipy.tasks]
fix = "ruff check --fix . && ruff format . && ssort"
lint = "ruff check . && ruff format --check . && pyrefly check && ssort --check"
test = "pytest"
